# openenv-code-review

./: .gitignore  Dockerfile  README.md  client.py  demo.ipynb  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json
server/: Dockerfile  app.py  environment.py  grader.py  requirements.txt
tasks/: __init__.py  task_bank.py
